JI-2305 Fix scrollbar bug in SingleChoice (button-mode)

--- a/src/styles/interactive-video.css
+++ b/src/styles/interactive-video.css
@@ -1245,7 +1245,7 @@
 .h5p-interactive-video .h5p-dialog-close:active:before {
   color: #454545;
 }
-.h5p-interactive-video .h5p-dialog-inner {
+.h5p-interactive-video .h5p-dialog .h5p-dialog-inner {
   height: 100%;
   overflow: hidden;
   overflow-y: auto;
